Mockito_22/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Mockito_22_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:target/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Mockito_22/Mockito/evosuite/3/org/mockito/internal/matchers/Equality_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Mockito_22/Mockito/evosuite/3/org/mockito/internal/matchers/Equality_ESTest.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Mockito_22/Mockito/evosuite/3/org/mockito/internal/matchers/Equality_ESTest.java:13: error: cannot find symbol
import org.mockito.internal.matchers.Equality;
                                    ^
  symbol:   class Equality
  location: package org.mockito.internal.matchers
/home/liumengjiao/Desktop/CI/Evosuite/Mockito_22/Mockito/evosuite/3/org/mockito/internal/matchers/Equality_ESTest.java:21: error: cannot find symbol
      boolean boolean0 = Equality.areEqual("[Kr^", object0);
                         ^
  symbol:   variable Equality
  location: class Equality_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Mockito_22/Mockito/evosuite/3/org/mockito/internal/matchers/Equality_ESTest.java:27: error: cannot find symbol
      Equality equality0 = new Equality();
      ^
  symbol:   class Equality
  location: class Equality_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Mockito_22/Mockito/evosuite/3/org/mockito/internal/matchers/Equality_ESTest.java:27: error: cannot find symbol
      Equality equality0 = new Equality();
                               ^
  symbol:   class Equality
  location: class Equality_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Mockito_22/Mockito/evosuite/3/org/mockito/internal/matchers/Equality_ESTest.java:32: error: cannot find symbol
      boolean boolean0 = Equality.areEqual("Hdb;zE*]rC", "Hdb;zE*]rC");
                         ^
  symbol:   variable Equality
  location: class Equality_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Mockito_22/Mockito/evosuite/3/org/mockito/internal/matchers/Equality_ESTest.java:39: error: cannot find symbol
      boolean boolean0 = Equality.areEqual((Object) null, object0);
                         ^
  symbol:   variable Equality
  location: class Equality_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Mockito_22/Mockito/evosuite/3/org/mockito/internal/matchers/Equality_ESTest.java:46: error: cannot find symbol
      boolean boolean0 = Equality.areEqual(object0, (Object) null);
                         ^
  symbol:   variable Equality
  location: class Equality_ESTest
7 errors
